feat: Добавил механизм редактирования игры
