# web-crm/src/constants/api/game.api.ts
@@ -1,5 +1,6 @@
 const GameApi = {
   CREATE_GAME: "/creator/game/create",
+  UPDATE_GAME: "/creator/game/update",
   CREATED_GAMES: "/creator/games/created",
   GAME_DELETE: "/creator/game/delete",
   GAME_INFO: "/creator/game/info",
